--- a/phase3-w25/Execution/Makefile
+++ b/phase3-w25/Execution/Makefile
@@ -3,9 +3,11 @@ CFLAGS = -Wall -I../include
 
 PARSER_SRC = ../src/parser/parser.c
 LEXER_SRC = ../src/lexer/lexer.c
-OBJ = parser.o lexer.o
+SEMANTIC_SRC = ../src/semantic/semantic.c
+MAIN_SRC = main.c
+OBJ = parser.o lexer.o semantic.o main.o
 
-TARGET = parser
+TARGET = compiler.exe
 
 all: $(TARGET)
 
@@ -18,7 +20,13 @@ parser.o: $(PARSER_SRC)
 lexer.o: $(LEXER_SRC)
 	$(CC) $(CFLAGS) -c -o $@ $<
 
+semantic.o: $(SEMANTIC_SRC)
+	$(CC) $(CFLAGS) -c -o $@ $<
+
+main.o: $(MAIN_SRC)
+	$(CC) $(CFLAGS) -c -o $@ $<
+
 clean:
-	rm -f $(OBJ) $(TARGET)
+	del /Q $(OBJ) $(TARGET) 2>nul || echo "Files already cleaned"
 
 .PHONY: all clean
